--- a/src/css/tomee-footer.css
+++ b/src/css/tomee-footer.css
@@ -3,3 +3,20 @@ footer {
   -webkit-background-size: cover;
   background-size: cover;
 }
+
+footer .footer-heading {
+  color: var(--footer-heading-font-color);
+}
+
+footer .social-footer {
+  -webkit-box-pack: start;
+  display: flex;
+  justify-content: flex-start;
+  margin-right: auto;
+}
+
+.social-footer-item,
+.social-footer-item a {
+  color: var(--color-white);
+  padding-right: 0.5rem;
+}
