--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,4 +1,23 @@
 <footer class="footer">
-  <p>This page was built using the Antora default UI.</p>
-  <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 text-center-mobile">
+        <h3 class="footer-heading">Be simple.  Be certified. Be Tomcat.</h3>
+        <h5 class="footer-heading">"A good application in a good server"</h5>
+      </div>
+      <div class="social-footer">
+        <div class="social-footer-item"><a href="https://www.facebook.com/ApacheTomEE/"><i class="fa fa-facebook"></i></a></div>
+        <div class="social-footer-item"><a href="https://twitter.com/apachetomee"><i class="fa fa-twitter"></i></a></div>
+        <div class="social-footer-item"><a href="https://plus.google.com/communities/105208241852045684449"><i class="fa fa-google-plus"></i></a></div>
+      </div>
+    </div>
+    <div class="row bottom-footer text-center-mobile">
+      <div class="col-sm-12">
+        <p>Copyright &copy; 1999-2020 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.
+          Apache TomEE, TomEE, Apache, the Apache feather logo, and the Apache TomEE project logo are trademarks of The Apache Software Foundation.
+          All other marks mentioned may be trademarks or registered trademarks of their respective owners.</p>
+        <p>Portions of the website UI are derived from the Antora default UI and are licensed under MPL 2.0</p>
+      </div>
+    </div>
+  </div>
 </footer>
