--- a/src/partials/head-styles.hbs
+++ b/src/partials/head-styles.hbs
@@ -1,2 +1,6 @@
-    <link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{{#if (eq page.attributes.layout 'home-page')}}
+<link rel="stylesheet" href="{{{uiRootPath}}}/css/home.css">
+{{else}}
+<link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
+{{/if}}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
