--- a/src/css/site.css
+++ b/src/css/site.css
@@ -14,6 +14,7 @@
 @import "pagination.css";
 @import "header.css";
 @import "footer.css";
+@import "tomee-header.css";
 @import "tomee-footer.css";
 @import "highlight.css";
 @import "print.css";
