add v9 to header

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -18,6 +18,7 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="{{{relativize "/tomee/8.0/docs.html"}}}">Documentation</a>
           <div class="navbar-dropdown">
+            <a class="navbar-item" href="{{{relativize "/tomee/9.0/docs.html"}}}">TomEE 9</a>
             <a class="navbar-item" href="{{{relativize "/tomee/8.0/docs.html"}}}">TomEE 8</a>
             <a class="navbar-item" href="{{{relativize "/tomee/7.1/docs.html"}}}">TomEE 7.1</a>
             <a class="navbar-item" href="{{{relativize "/tomee/7.0/docs.html"}}}">TomEE 7</a>
